# ATPL_finalproject

./: README.md  reproduce_benchmarks.sh
HQPlayground/: hqp.cabal
HQPlayground/exe/: Benchmark.hs  NoCloning.hs  ProgramInversion.hs  TestClifford.hs  TestDecomposition.hs  YesTeleportation.hs  plot_benchmark.py
HQPlayground/src/: HQP.hs
HQPlayground/src/HQP/: Opt.hs  PrettyPrint.hs  QOp.hs
HQPlayground/src/HQP/Opt/: CliffordExtraction.hs  GateDecomposition.hs  SmartExtraction.hs
HQPlayground/src/HQP/PrettyPrint/: PrettyOp.hs  Visualizer.hs
HQPlayground/src/HQP/QOp/: CliffordExtraction.hs  HelperFunctions.hs  Operator.hs  Optimiser.hs  Simplify.hs  Symplectic.hs  Syntax.hs
