cabal-version:   3.4
name:            hqp
version:         0.1.0.0
synopsis:        HQP language playground in Haskell
license:         BSD-3-Clause
author:          James Avery
maintainer:      avery@diku.dk
category:        Math
build-type:      Simple

common warnings
    ghc-options: -Wall -Wno-orphans

common common-options
    default-language: GHC2021    
    default-extensions:
        NoMonomorphismRestriction,
        FlexibleContexts,
        FlexibleInstances,
        TypeFamilies,
        TypeSynonymInstances,
        BinaryLiterals,
        PatternSynonyms

library core
    import:           warnings, common-options
    exposed-modules: 
      HQP,
      HQP.QOp,
      HQP.QOp.Syntax,
      HQP.QOp.HelperFunctions,
      HQP.QOp.Symplectic,
      HQP.Opt,
      HQP.Opt.GateDecomposition,
      HQP.Opt.CliffordExtraction,
      HQP.Opt.SmartExtraction,
      HQP.PrettyPrint,
      HQP.PrettyPrint.PrettyOp,
    build-depends:    
        base,
        hmatrix,
        random,
        mtl
    hs-source-dirs:   src

common exe-common
    import:           warnings, common-options
    hs-source-dirs:   exe
    build-depends:
        base,
        hmatrix,
        random,
        hqp:core 

executable TestClifford
    import:           exe-common
    main-is:          TestClifford.hs

executable Benchmark
    import:           exe-common
    main-is:          Benchmark.hs